Code et Données résultats sur le Highway.
La légende, aussi.

--- a/piot2012cascading/main_KLEIN_v3.tex
+++ b/piot2012cascading/main_KLEIN_v3.tex
@@ -550,33 +550,29 @@ The results are shown in two figures. Figure \ref{Fig1.fig} show the baselines w
   \begin{tabular}{ccc}
   \subfigure[State of the art approaches on the GridWorld]{\includegraphics[width=.45\linewidth]{"Fig1"}\label{Fig1.fig}}&\hspace{.05\linewidth}&
   \subfigure[Our new approach on the GridWorld]{\includegraphics[width=.45\linewidth]{"Fig2"}\label{Fig2.fig}}\\
-%%  \subfigure[Cascading with natural features]{\includegraphics[width=.4\linewidth]{"Cascading_Exp1_fig1"}\label{Cascading_Exp1_1.fig}}&\hspace{.05\linewidth}&\includegraphics[width=0.45\linewidth]{"Cascading_Exp1_legend"}
+  \subfigure[All approaches on the Highway driving simulator]{\includegraphics[width=.4\linewidth]{"Fig3"}\label{Fig3.fig}}&\hspace{.05\linewidth}&\includegraphics[width=0.45\linewidth]{"Legend"}
   \end{tabular}
- \caption{Results on the GridWorld problem. Data is shown with mean, standard deviation, minimum and maximum value over 50 runs.}
+  \caption{Results on the GridWorld and Highway problems. Data is shown with mean, standard deviation, minimum and maximum value over 50 runs.}
   \end{figure}
 
 
 
 \subsection{Highway driving simulator}
-There are problems for which pure classification just does not cut it, as the number of samples that would be needed 
-Inspired from a problem seen in \cite{syed2008apprenticeship,syed2008game}, we coded a driving simulator. The agent controls a car that can switch between the three lanes of the road, go off-road on either side and modulate between three speed levels. The first thing to note about this setting is that the direct problem (RL) problem is not trivial, as LSPI is unable to solve it using the natural features we first gave it. These feature stemmed from a discretization of the state-action space, the dimension of the features being the cardinality of this space. With each state-action pair $s,a$ we associate an index $i$ so that the $i$-th coordinate of the feature is $1$ and every other is $0$. We tried to train an agent on the reward used by the expert (which was trained using an exact dynamic programming approach), but on top of being extremely slow to run (the LSTD$Q$ subroutine implies a matrix inversion) it does not converge.\\
-As LSPI is used in \cite{abbeel2004apprenticeship}'s algorithm to solve the MDP, it is impossible to use the latter with the natural features. We thus have to spend quite some time engeineering new informative features to make LSPI work. These new features have a dimensionality of $5$, including a constant term and coordinates whose semantics is \emph{The agent should turn right}, \emph{The agent should turn left}, \emph{The agent should increase its speed} and \emph{The agent should do nothing}. With these features in hand, we were able to solve the IRL problem with \cite{abbeel2004apprenticeship}'s algorithm. The results of our experiment is given on two figures, Figure \ref{Cascading_Exp1_1.fig} and \ref{Cascading_Exp1_2.fig}. The data presented here is the mean, minimum and maximum value obtained over 50 runs. The random baseline presented here is the mean, min adn max performance of an agent over 50 different random rewards.\\
-Figure \ref{Cascading_Exp1_1.fig} shows results when employing the Cascading algorithm with the natural set of features and Figure \ref{Cascading_Exp1_2.fig} shows results when using the engineered features, comparing it the the results of \cite{abbeel2004apprenticeship}'s algorithm which could be applied in this case. Although the mean value with natural features is lower than with the engineered ones, we see that there is less risk of catastrophic failure (the min value is higher) and, more importantly, we were actually able to solve the problem in a satisfying manner with.
-\subsection{Pendule}
-A n'ajouter que si les résultats présentent un intérêt particulier par rapport aux deux autres problèmes.
-
-
-\begin{itemize}
-\item description du problème
-\item deux sets de features pour faire marcher LSPI donc ANIRL
-\item résultats
-\item Insister sur le fait qu'on est meilleur quand il y a peu de samples
-\item Insisiter sur le fait qu'en features naturelles, LSPI ne fonctionne pas
-\end{itemize}
+There are problems for which pure classification just does not cut it, as the number of samples that would be needed to imitate the expert's control is dauntingly large. To illustrate this, inspired from a problem seen in \cite{syed2008apprenticeship,syed2008game}, we coded a driving simulator. The agent controls a car that can switch between the three lanes of the road, go off-road on either side and modulate between three speed levels. The first thing to note about this setting is that the direct problem (RL) problem is not trivial, as LSPI is unable to solve it using the natural features we first gave it. These feature stemmed from a discretization of the state-action space, the dimension of the features being the cardinality of this space. With each state-action pair $s,a$ we associate an index $i$ so that the $i$-th coordinate of the feature is $1$ and every other is $0$. We tried to train an agent on the reward used by the expert (which was trained using an exact dynamic programming approach), but on top of being extremely slow to run (the LSTD$Q$ subroutine implies a matrix inversion) it does not converge.\\
+As LSPI is used in our instanciation of \cite{abbeel2004apprenticeship}'s algorithm to solve the MDP, it is impossible to use the latter with the natural features. Although it proved possible to engineer features so that LSPI converges thus making the state of the art IRL algorithm work, this is outside the scope of this document. As a baseline we used an instanciation of \cite{abbeel2004apprenticeship}'s algorithm that imake use of all the information about the problem. It is displayed as an horizontal line in figure \ref{Fig3.fig} because it does not use samples from the expert, instead it uses the transition probabilities and the expert's policy to compute the exact feature expectation of the expert and every intermediate policy.\\
+As predicted, pure classification is not sample efficient enough to provide a good control whereas our approach is able to generalize from very little data and exhibits performance on par with the \emph{fully-informed} state of the art algorithm when given as few as 100 samples.\\
+Furthermore, the state of the art algorihtm make use of intermediate policies, which is computationally costly particularily when the state space gets big. Our approach computational cost scales with the number of samples we are given, which is as we demonstrated a small number. Experimentally, when producing the data for our graph, it took less time to run the cascading approach 50 times for 6 abcissa than to run \cite{abbeel2004apprenticeship}'s algorithm once.\\
 \section{Related Work}
 \label{section: related work}
+All the IRL approaches summed up in \cite{neu2009training}, namely the historical approach of \cite{ng2000algorithms} as well as for example \cite{abbeel2004apprenticeship,syed2008apprenticeship,syed2008game, ziebart2008maximum} share the same pivotal argument of trying to minimize some distance between the feature expectation of the expert and the feature expectation of another policy through successive updates of this intermediate policy. The main problem with these algorithm is that the update on the policy is done through the update of a reward function. This means that the forward problem of RL must be repeatedly solved ; this is often non trivial, and almost always computationally costly.\\
 
+Our algorithm avoid this pitfall, specifically, one needs more information to solve the forward problem than to just compute the feature expectation of the expert as our algorithm does. Even a recent contribution like \cite{boularias2011relative} still needs samples that cover a large portion of the state space although it does not explicitely require the ability to solve the forward problem.\\
+
+A recurring argument is to see the expert not only as optimal but as optimal by a certain margin. The action chosen by the expert should have a quality strictly greater than any other action. Structured planning as done in \cite{ratliff2006maximum,ratliff2007imitation, ratliff2007boosting, kolter2008hierarchical} allow some influence on the margin. Through the $l$ function of our classifier, we share the same feature.\\
+
+Finally, \cite{ratliff2007imitation} cast the imitation learnig problem as a multi class classification problem. As seen in the experimental results, the power of generalization of our approach is greater than pure classification thanks to the regression step. This allows us to be more sample efficient than any other published approach known to us.
 \section{Conclusion}
+We provide a new solution to the IRL problem that avoid most pitfalls of existing approaches. It outputs a reward function, the most succinct and transferrable description of a task without having to repeatedly solve the forward RL problem. The only information our algorithm need is provided by samples from the expert, which is to the best of our knowledge a feature that can not be found in any other published algorithm. Even recent other approaches need randomly drawn samples. We provided theoretical results showing the soundness of our approach as well as experimental benchmarks comparing it to a widely known state of the art algorithm. In a near furure, experiments on real world robotics problems will take place. We hope to benchmark our algorithm against the few other approaches shown to work in such a difficult context.
 
 \bibliographystyle{alpha}
 \bibliography{Biblio}
