Amélioration de détails dans le papier et nouvelles courbes pour Matthieu

--- a/Highway/Cascading_Exp5.org
+++ b/Highway/Cascading_Exp5.org
@@ -83,7 +83,7 @@ y_max = myPlot.ymax
 y_min = myPlot.ymin
 pylab.axis([x_min,x_max,y_min,y_max])
 pylab.xlabel('Number of samples from the expert')
-pylab.ylabel('${1\over card(S)}\sum\limits_{s\in S}V(s)$')
+pylab.ylabel('$\mathbf{E}_{s\sim\mathcal{U}}[V^{\pi}_{\mathcal{R}_E}(s)]$')
 pylab.grid(True)
 filled_mean_min_max( pylab, X, Y_mean, Y_min, Y_max, 'yellow', 0.2,'--',None,None)
 filled_mean_min_max( pylab, X, Y_mean, Y_mean - Y_var, Y_mean + Y_var, 'yellow', 0.4,'-.',None,None)
