--- a/piot2012cascading/Biblio.bib
+++ b/piot2012cascading/Biblio.bib
@@ -1180,6 +1180,12 @@
 	Volume = {1},
 	Year = {2009}}
 
+@book{baldi2000martingales,
+  Title={Martingales et cha{\^\i}nes de Markov: th{\'e}orie {\'e}l{\'e}mentaire et exercices corrig{\'e}s},
+  Author={Baldi, P. and Mazliak, L. and Priouret, P.},
+  Year={2000},
+  Publisher={Hermann}}
+
 @article{torresani2007large,
 	Author = {Torresani, L. and Lee, K.},
 	Date-Added = {2011-10-12 09:52:51 +0000},
@@ -3382,6 +3388,7 @@
   Pages={435--442},
   Title={Cost-sensitive learning by cost-proportionate example weighting},
   Year={2003}}
+
 
 
 @inproceedings{ross2010efficient,
